@@ -346,8 +346,11 @@ BOOL CMainFrame::LoadViews()
 			m_dlgFilePatches.Init(&m_Patch, this, m_Data.m_sPatchPath);
 			m_dlgFilePatches.ShowWindow(SW_SHOW);
 			m_pwndLeftView->m_sWindowName = _T("");
+			m_pwndLeftView->m_sFullFilePath = _T("");
 			m_pwndRightView->m_sWindowName = _T("");
+			m_pwndRightView->m_sFullFilePath = _T("");
 			m_pwndBottomView->m_sWindowName = _T("");
+			m_pwndBottomView->m_sFullFilePath = _T("");
 			m_pwndLeftView->DocumentUpdated();
 			m_pwndRightView->DocumentUpdated();
 			m_pwndBottomView->DocumentUpdated();
@@ -375,9 +378,11 @@ BOOL CMainFrame::LoadViews()
 			m_pwndLeftView->m_arLineStates = &m_Data.m_arStateYourBaseBoth;
 			m_pwndLeftView->m_sWindowName = (m_Data.m_sYourFile.Mid(m_Data.m_sYourFile.ReverseFind('\\')+1))+ _T(" - ") +
 											(m_Data.m_sBaseFile.Mid(m_Data.m_sBaseFile.ReverseFind('\\')+1));
+			m_pwndLeftView->m_sFullFilePath = m_pwndLeftView->m_sWindowName;
 			m_pwndRightView->m_arDiffLines = &m_Data.m_arDiffYourBaseRight;
 			m_pwndRightView->m_arLineStates = &m_Data.m_arStateYourBaseRight;
 			m_pwndRightView->m_sWindowName = m_Data.m_sYourFile.Mid(m_Data.m_sYourFile.ReverseFind('\\')+1);
+			m_pwndRightView->m_sFullFilePath = m_Data.m_sYourFile;
 			m_pwndLeftView->DocumentUpdated();
 			m_pwndRightView->DocumentUpdated();
 			m_pwndBottomView->DocumentUpdated();
@@ -394,9 +399,11 @@ BOOL CMainFrame::LoadViews()
 			m_pwndLeftView->m_arDiffLines = &m_Data.m_arDiffYourBaseLeft;
 			m_pwndLeftView->m_arLineStates = &m_Data.m_arStateYourBaseLeft;
 			m_pwndLeftView->m_sWindowName = m_Data.m_sBaseFile.Mid(m_Data.m_sBaseFile.ReverseFind('\\')+1);
+			m_pwndLeftView->m_sFullFilePath = m_Data.m_sBaseFile;
 			m_pwndRightView->m_arDiffLines = &m_Data.m_arDiffYourBaseRight;
 			m_pwndRightView->m_arLineStates = &m_Data.m_arStateYourBaseRight;
 			m_pwndRightView->m_sWindowName = m_Data.m_sYourFile.Mid(m_Data.m_sYourFile.ReverseFind('\\')+1);
+			m_pwndRightView->m_sFullFilePath = m_Data.m_sYourFile;
 			m_pwndLeftView->DocumentUpdated();
 			m_pwndRightView->DocumentUpdated();
 			m_pwndBottomView->DocumentUpdated();
@@ -414,12 +421,15 @@ BOOL CMainFrame::LoadViews()
 		m_pwndLeftView->m_arDiffLines = &m_Data.m_arDiffTheirBaseBoth;
 		m_pwndLeftView->m_arLineStates = &m_Data.m_arStateTheirBaseBoth;
 		m_pwndLeftView->m_sWindowName = _T("Theirs - ")+(m_Data.m_sTheirFile.Mid(m_Data.m_sTheirFile.ReverseFind('\\')+1));
+		m_pwndLeftView->m_sFullFilePath = m_Data.m_sTheirFile;
 		m_pwndRightView->m_arDiffLines = &m_Data.m_arDiffYourBaseBoth;
 		m_pwndRightView->m_arLineStates = &m_Data.m_arStateYourBaseBoth;
 		m_pwndRightView->m_sWindowName = _T("Yours - ")+(m_Data.m_sYourFile.Mid(m_Data.m_sYourFile.ReverseFind('\\')+1));
+		m_pwndRightView->m_sFullFilePath = m_Data.m_sYourFile;
 		m_pwndBottomView->m_arDiffLines = &m_Data.m_arDiff3;
 		m_pwndBottomView->m_arLineStates = &m_Data.m_arStateDiff3;
 		m_pwndBottomView->m_sWindowName = _T("Merged - ")+(m_Data.m_sMergedFile.Mid(m_Data.m_sMergedFile.ReverseFind('\\')+1));
+		m_pwndBottomView->m_sFullFilePath = m_Data.m_sMergedFile;
 		m_pwndLeftView->DocumentUpdated();
 		m_pwndRightView->DocumentUpdated();
 		m_pwndBottomView->DocumentUpdated();
